workloads/demo-keycloak/route-keycloak.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: argocd-demo-apps
spec:
  to:
    kind: Service
    name: keycloak
  port:
    targetPort: http
